// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeSceneContainer /> should render home component with loader 1`] = `
<main>
  <WithStyles(SearchPanelComponent)
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "pathname": "/",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    pathname="/"
  />
  <WithStyles(SortResultsPanelComponent)
    currentSortParam="RELEASE_DATE"
    onSortParamChange={[MockFunction]}
  />
  <WithStyles(WithLoadingComponent)
    error=""
    loading={true}
    movies={Array []}
    title="Found results:"
  />
</main>
`;

exports[`<HomeSceneContainer /> should render home component with movie tiles pane 1`] = `
<main>
  <WithStyles(SearchPanelComponent)
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "pathname": "/",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    pathname="/"
  />
  <WithStyles(SortResultsPanelComponent)
    currentSortParam="RELEASE_DATE"
    onSortParamChange={[MockFunction]}
    total={20}
  />
  <WithStyles(WithLoadingComponent)
    error=""
    loading={false}
    movies={
      Array [
        Object {
          "genres": Array [
            "Action",
            "Adventure",
            "Science Fiction",
          ],
          "id": 447365,
          "poster_path": "https://image.tmdb.org/t/p/w500/ldoY4fTZkGISMidNw60GHoNdgP8.jpg",
          "release_date": "2020-12-12",
          "title": "Guardians of the Galaxy Vol. 3",
        },
        Object {
          "genres": Array [
            "Science Fiction",
            "Action",
            "Adventure",
          ],
          "id": 424785,
          "poster_path": "https://image.tmdb.org/t/p/w500/432BowXw7a4fWXSONxBaFKqvW4f.jpg",
          "release_date": "2019-12-12",
          "title": "Transformers 7",
        },
      ]
    }
    title="Found results:"
  />
</main>
`;
